  the endpoint. This functions identically to chan_sip's "rtpkeepalive" option.

* New 'rtp_timeout' and 'rtp_timeout_hold' endpoint options have been added.
  These options specify the amount of time, in seconds, that Asterisk will wait
  before terminating the call due to lack of received RTP. These are identical
  to chan_sip's rtptimeout and rtpholdtimeout options.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0-cert1 to Asterisk 13.1-cert2 --
------------------------------------------------------------------------------

res_pjsip
------------------
 * A new 'endpoint_identifier_order' option has been added that allows one to
   set the order by which endpoint identifiers are processed and checked. This
   option is specified under the 'global' type configuration section.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.1.0 to Asterisk 13.1-cert1 --------
------------------------------------------------------------------------------

res_pjsip_outbound_registration
------------------
 * The 'pjsip send unregister' command now stops further registrations.

 * A new command 'pjsip send register' has been added which allows you to
   start or restart periodic registration.  It can be used after a
   'send unregister' or after a 401 permanent error.

chan_pjsip
------------------
 * New 'user_eq_phone' endpoint setting. This adds a 'user=phone' parameter
   to the request URI and From URI if the user is determined to be a phone number.

 * New global setting 'keep_alive_interval'. Setting this to a non-zero value
   will cause keep alive messages to be sent periodically over connection
   oriented transports.

ARI
------------------
 * The Originate operation now takes in an originator channel. The linked ID of
   this originator channel is applied to the newly originated outgoing channel.